--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "concurrently \"vite\" \"nodemon ./server/server.js\""
   },
   "dependencies": {
+    "@evmexplorer/blockscout": "^0.0.21",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
